src/objects/Country_Uplift__c.object
<CustomObject>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Multiplier__c</fullName>
        <description>Multiplier applied for Services or Ed Services PSC products</description>
        <label>Service Multiplier</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uplift_Multiplier__c</fullName>
        <label>Product Multiplier</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <description>Defines multiplier to List Price based on Sold To Country and  PSC
Formerly named County Uplift (API name Country_Uplift__c)</description>
    <label>Country Multiplier</label>
    <nameField>
        <label>Country Multiplier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Country Multiplier</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country_Code__c</columns>
        <columns>Uplift_Multiplier__c</columns>
        <columns>Service_Multiplier__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>